MCADevOrg/src/objects/Syndication__c.object
<CustomObject>
    <fields>
        <fullName>Anticipated_Term_Months__c</fullName>
        <formula>Opportunity__r.Term_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anticipated Term - Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Fee__c</fullName>
        <inlineHelpText>Amount paid towards commissions</inlineHelpText>
        <label>Commission Fee $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Funding_Amount__c</fullName>
        <formula>Opportunity__r.Funding_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Funding Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Payback_Amount__c</fullName>
        <formula>Opportunity__r.Payback_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Payback Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disbursment_Schedule__c</fullName>
        <label>Disbursement Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bi-weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Repayment_Date__c</fullName>
        <formula>Opportunity__r.Date_Funded__c + (Opportunity__r.Term_Months__c *30.4368)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Esti. Repay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Syndication</relationshipLabel>
        <relationshipName>Syndication</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Profit_Amount__c</fullName>
        <formula>Repayment_Amt_Gross__c -  Syndication_Amt__c -  Servicing_Fee__c -  Commission_Fee__c  - ( (Deal_Payback_Amount__c *  Syndication_per__c)* Syndication_Percentage__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profit_Percentage__c</fullName>
        <formula>IF(Syndication_Amt__c&gt;0,Profit_Amount__c /  Syndication_Amt__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Monthly_Pmt_Amt__c</fullName>
        <formula>IF(Opportunity__r.Term_Months__c&gt;0, Repayment_Amt__c / Opportunity__r.Term_Months__c ,0)</formula>
        <label>Projected Monthly Pmt Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ROR_per__c</fullName>
        <formula>IF(Syndication_Amt__c &gt; 0 , 
 Profit_Amount__c /  Syndication_Amt__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROR %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Repayment_Amt_Gross__c</fullName>
        <formula>Deal_Payback_Amount__c  * Syndication_per__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repayment Amt (Gross) $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Repayment_Amt__c</fullName>
        <formula>( Deal_Payback_Amount__c *  Syndication_per__c  ) -   Servicing_Fee__c -  Commission_Fee__c - ( (Deal_Payback_Amount__c *  Syndication_per__c)* Syndication_Percentage__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repayment Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Servicing_Bank__c</fullName>
        <formula>Opportunity__r.Bank_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Servicing Bank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Fee__c</fullName>
        <inlineHelpText>Management Fee charged by the Bank that is servicing the deal</inlineHelpText>
        <label>Servicing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Syndicated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The entity that is participating on the deal</inlineHelpText>
        <label>Syndicated By</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Syndication</relationshipLabel>
        <relationshipName>Syndication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Syndication_Amt__c</fullName>
        <inlineHelpText>Participation amount</inlineHelpText>
        <label>Syndication Amt $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Syndication_Fee_Dollar__c</fullName>
        <formula>( Deal_Payback_Amount__c  * Syndication_per__c ) *  Syndication_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Syndication Fee $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Syndication_Percentage__c</fullName>
        <label>Syndication Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Syndication_per__c</fullName>
        <formula>IF( NOT(ISBLANK(Deal_Funding_Amount__c)), Syndication_Amt__c  /  Deal_Funding_Amount__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Syndication Portion %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TestBoolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TestBoolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestDateField__c</fullName>
        <label>TestDateField</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TestDateTimeField__c</fullName>
        <label>TestDateTimeField</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TestEmailField__c</fullName>
        <label>TestEmailField</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TestMultiPicklist__c</fullName>
        <label>TestMultiPicklist</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TestPhoneField2__c</fullName>
        <label>TestPhoneField2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TestPhoneField__c</fullName>
        <label>TestPhoneField</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TestPhone__c</fullName>
        <label>TestPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TestTextField__c</fullName>
        <label>TestTextField</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Holiday</label>
        <referenceTo>Bank_Holiday__c</referenceTo>
        <relationshipLabel>Syndications</relationshipLabel>
        <relationshipName>Syndications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Syndication</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Deal_Funding_Amount__c</columns>
        <columns>Servicing_Bank__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Syndication_Percentage__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SYND-{00000}</displayFormat>
        <label>Syndication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Syndications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Test_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Syndication_Amt__c = 10</errorConditionFormula>
        <errorMessage>This is Test Validation Rule</errorMessage>
    </validationRules>
</CustomObject>